--- a/helm-guestbook/templates/deployment.yaml
+++ b/helm-guestbook/templates/deployment.yaml
@@ -28,6 +28,9 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+            - name: http
+              containerPort: 8081
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /
