--- a/helm-guestbook/templates/deployment.yaml
+++ b/helm-guestbook/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
-            - name: http
+            - name: http8081
               containerPort: 8081
               protocol: TCP
           livenessProbe:
