--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: gcr.io/heptio-images/ks-guestbook-demo
+  repository: europe-west1-docker.pkg.dev/injenia-artifact/in-docker/argocd/app-test
   tag: 0.1
   pullPolicy: IfNotPresent
 
