--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -4,9 +4,13 @@
 
 replicaCount: 1
 
-image:
+image1:
   repository: europe-west1-docker.pkg.dev/injenia-artifact/in-docker/argocd/app-test
-  tag: 0.1
+  tag: 1.0
+  pullPolicy: IfNotPresent
+image2:
+  repository: europe-west1-docker.pkg.dev/injenia-artifact/in-docker/argocd/app-test
+  tag: 2.0
   pullPolicy: IfNotPresent
 
 service:
