--- a/helm-guestbook/templates/deployment1.yaml
+++ b/helm-guestbook/templates/deployment1.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image1.repository }}:{{ .Values.image1.tag }}"
+          image: "{{ .Values.image1.repository }}:{{ .Values.image1.tag | toString }}"
           imagePullPolicy: {{ .Values.image1.pullPolicy }}
           ports:
             - name: http
